# ght

./: README.md  meson.build
ght/include/: ght.h
ght/src/: ght.c
include/: ght.h
src/: ght.c
